Dll_WindowsExp2/Dll_WindowsExp2/CreateDLL.h

#pragma once

extern "C" _declspec(dllexport) int __stdcall plus3(int a, int b, int c);
extern "C" _declspec(dllexport) int __stdcall mul2(int a, int b);
extern "C" _declspec(dllexport) char* __stdcall unionString(char* a, char* b);
extern "C" _declspec(dllexport) int __stdcall Fac(int x);
extern "C" _declspec(dllexport) int __stdcall subtract(int a, int b);